DeCoupled Server files

--- a/package.json
+++ b/package.json
@@ -78,10 +78,10 @@
     "workbox-webpack-plugin": "5.1.4"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "dev": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "server": "node scripts/server.js"
+    "start": "node scripts/start.js",
   },
   "eslintConfig": {
     "extends": [
