--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "dev": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "start": "node scripts/start.js",
+    "start": "node scripts/start.js"
   },
   "eslintConfig": {
     "extends": [
